add rate limit on login and crypto